compiler/tests/liva/errors/import_helper.liva
// Helper module for import error tests
greet(): string {
    return "hello"
}

_secret(): string {
    return "hidden"
}
